--- a/app/src/main/res/layout/addworkout.xml
+++ b/app/src/main/res/layout/addworkout.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="320dp"
-    android:layout_height="340dp"
+    android:layout_height="290dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="6dp"
     android:layout_gravity="center"
@@ -13,19 +13,19 @@
         android:id="@+id/input_workout_name"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="6dp"
         android:textColorHint="@color/colorAccent"
         android:theme="@style/MyStyle"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/field_workout_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="match_parent"
             android:hint="@string/workout_name"
             android:textColor="@color/colorAccent"
             android:textSize="14sp" />
@@ -36,82 +36,80 @@
         android:layout_width="225dp"
         android:layout_height="55dp"
         android:fontFamily="@font/qanelas"
-        android:gravity="center"
         android:hint="@string/workout_type"
+        android:layout_marginStart="8dp"
         android:textSize="14sp"
-        app:met_primaryColor="@color/colorAccent"
-        app:met_underlineColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_workout_name"
         app:met_floatingLabel="normal"
-        />
+        app:met_primaryColor="@color/colorAccent"
+        app:met_underlineColor="@color/colorAccent" />
 
     <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
         android:id="@+id/lvl_spinner"
         android:layout_width="225dp"
         android:layout_height="55dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="@font/qanelas"
-        android:gravity="center"
         android:hint="@string/workout_training_level"
-        app:met_primaryColor="@color/colorAccent"
-        app:met_underlineColor="@color/colorAccent"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/type_spinner"
-        app:met_floatingLabel="normal" />
+        app:met_floatingLabel="normal"
+        app:met_primaryColor="@color/colorAccent"
+        app:met_underlineColor="@color/colorAccent" />
 
     <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
         android:id="@+id/day_spinner"
         android:layout_width="225dp"
         android:layout_height="52dp"
         android:fontFamily="@font/qanelas"
-        android:gravity="center"
         android:hint="@string/weekly_days"
-        app:met_primaryColor="@color/colorAccent"
-        app:met_underlineColor="@color/colorAccent"
         android:textSize="14sp"
+        android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lvl_spinner"
-        app:met_floatingLabel="normal" />
+        app:met_floatingLabel="normal"
+        app:met_primaryColor="@color/colorAccent"
+        app:met_underlineColor="@color/colorAccent" />
 
     <Button
         android:id="@+id/done_adding"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="27dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="32dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="79dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/qanelas"
         android:text="@string/done"
         android:textColor="@color/colorAccent"
-        style="?android:attr/borderlessButtonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/cancel_adding"
-        app:layout_constraintTop_toBottomOf="@+id/day_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/day_spinner"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/cancel_adding"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="27dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="34dp"
+        android:layout_width="79dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/qanelas"
+        android:padding="-50dp"
         android:text="@string/cancel"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/done_adding"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/day_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/day_spinner"
+        app:layout_constraintVertical_bias="0.26" />
 
 </android.support.constraint.ConstraintLayout>
