--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,17 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-<ImageView
-    android:id="@+id/gymgym"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:src="@drawable/gym"
-    android:scaleType="center"/>
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/gymgym"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="center"
+        android:src="@drawable/gym" />
 
     <LinearLayout
         android:id="@+id/master_frame"
@@ -51,9 +51,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
-                android:textSize="12sp"
                 android:inputType="textEmailAddress"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -64,18 +64,18 @@
             android:layout_gravity="center"
             android:textColorHint="@color/colorAccent"
             android:theme="@style/MyStyle"
+            app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorAccent"
-            app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp">
+            app:passwordToggleTint="@color/colorAccent">
 
             <EditText
                 android:id="@+id/field_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
@@ -90,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="6dp"/>
+                android:layout_marginBottom="6dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -119,8 +119,8 @@
             android:id="@+id/email_create_account_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/qanelas"
             android:elevation="4dp"
+            android:fontFamily="@font/qanelas"
             android:text="@string/signup"
             android:theme="@style/ThemeOverlay.MyDarkButton" />
     </LinearLayout>
