--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,12 +31,11 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="84dp"
-            android:layout_height="44dp"
+            android:layout_width="69dp"
+            android:layout_height="59dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/logo" />
+
+            android:background="@drawable/t1" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_email"
