--- a/app/src/main/res/layout/fragment_muscle_b.xml
+++ b/app/src/main/res/layout/fragment_muscle_b.xml
@@ -4,36 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="vyvital.fitz.MuscleActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="6dp">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="@color/colorPrimary"
-            android:fitsSystemWindows="true"
             app:expandedTitleMarginStart="16dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/fragment_b_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:contentDescription="Test"
-                android:scaleType="centerCrop"
-                tools:ignore="UnusedAttribute"
-                tools:src="@drawable/abs_t"
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 app:layout_collapseMode="parallax"
-                tools:transitionName="@string/abs_trans" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/fragment_b_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:contentDescription="Test"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    tools:ignore="UnusedAttribute"
+                    tools:src="@drawable/abs_t"
+                    tools:transitionName="@string/chest_trans" />
+            </LinearLayout>
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -43,6 +45,7 @@
         android:id="@+id/exerciseRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v7.widget.RecyclerView>
